fixing playlist not showing

--- a/src/components/RadioPlayer/radioPlayer.scss
+++ b/src/components/RadioPlayer/radioPlayer.scss
@@ -1,6 +1,7 @@
 .radio-player{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     height: 100vh;
     overflow: hidden;
 
@@ -18,8 +19,8 @@
         img {
             margin-top: 20px;
             max-height: 150px;
+            max-width: 150px;
         }
-        flex: 1;
         margin-bottom: 30px;
     }
 
@@ -53,7 +54,7 @@
         flex-direction: column;
         align-items: center;
         top: 0px;
-        max-height: 450px;
+        max-height: 340px;
         background-color: #FFF2F0;
 
         .header-list {
